# thermalmonitor

./: .gitignore
.github/workflows/: flatpak.yml
docs/: THERMAL-MANAGEMENT.md
docs/configuraciones/: thermal-conf.xml
docs/configuraciones/systemd-services/: thermal-manager.service  thermal-manager.timer
scripts/thermal-management/: cpu-mode  install-thermal-manager.sh  thermal-manager.sh
thermal-monitor-gui/: .gitignore  Cargo.toml  thermal-monitor.desktop
thermal-monitor-gui/.github/workflows/: flatpak.yml
thermal-monitor-gui/docs/: DIAGRAMS.puml  PLAN.md
thermal-monitor-gui/flatpak/: README.md  build-flatpak.sh  com.github.andresgarcia0313.ThermalMonitor.desktop  com.github.andresgarcia0313.ThermalMonitor.metainfo.xml  com.github.andresgarcia0313.ThermalMonitor.yml  io.github.andresgarcia0313.ThermalMonitor.desktop  io.github.andresgarcia0313.ThermalMonitor.metainfo.xml  io.github.andresgarcia0313.ThermalMonitor.yml
thermal-monitor-gui/flatpak/flathub/: com.github.andresgarcia0313.ThermalMonitor.yml  io.github.andresgarcia0313.ThermalMonitor.yml
thermal-monitor-gui/src/: app.rs  main.rs  system.rs
